[gd_scene load_steps=4 format=3 uid="uid://f4od28usm3o1"]

[ext_resource type="Script" path="res://Scripts/battle_manager.gd" id="1_5o3tt"]
[ext_resource type="PackedScene" uid="uid://c6y0jrwuqh0fp" path="res://Others/Characters/playerBattler.tscn" id="2_486yy"]
[ext_resource type="PackedScene" uid="uid://b8kfo2m4plngr" path="res://Others/Characters/enemyBattler.tscn" id="3_cievn"]

[node name="BattleScene" type="Node"]
script = ExtResource("1_5o3tt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 325)

[node name="BG" type="Sprite2D" parent="."]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnActionButtons" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -129.0
offset_top = -76.0
offset_right = 129.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="AttackBtn" type="Button" parent="CanvasLayer/TurnActionButtons"]
layout_mode = 2
text = "Attack"

[node name="SkipTurnBtn" type="Button" parent="CanvasLayer/TurnActionButtons"]
layout_mode = 2
text = "Skip"

[node name="BattleEndPanel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndTxt" type="RichTextLabel" parent="CanvasLayer/BattleEndPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -68.0
offset_right = 180.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -577.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerBattler" parent="PlayerArea" instance=ExtResource("2_486yy")]
position = Vector2(424, 152)

[node name="PlayerBattler2" parent="PlayerArea" instance=ExtResource("2_486yy")]
position = Vector2(424, 344)

[node name="PlayerBattler3" parent="PlayerArea" instance=ExtResource("2_486yy")]
position = Vector2(424, 536)

[node name="PlayerBattler4" parent="PlayerArea" instance=ExtResource("2_486yy")]
position = Vector2(296, 216)

[node name="PlayerBattler5" parent="PlayerArea" instance=ExtResource("2_486yy")]
position = Vector2(232, 344)

[node name="PlayerBattler6" parent="PlayerArea" instance=ExtResource("2_486yy")]
position = Vector2(296, 472)

[node name="EnemyArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 575.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyBattler2" parent="EnemyArea" instance=ExtResource("3_cievn")]
position = Vector2(161, 344)

[node name="EnemyBattler" parent="EnemyArea" instance=ExtResource("3_cievn")]
position = Vector2(289, 216)

[node name="EnemyBattler3" parent="EnemyArea" instance=ExtResource("3_cievn")]
position = Vector2(289, 472)
